--- a/stress/Cargo.toml
+++ b/stress/Cargo.toml
@@ -21,6 +21,7 @@ num_cpus = "1.15.0"
 opentelemetry_api = { path = "../opentelemetry-api", features = ["metrics", "logs"] }
 opentelemetry_sdk = { path = "../opentelemetry-sdk", features = ["metrics", "logs"] }
 opentelemetry-appender-tracing = { path = "../opentelemetry-appender-tracing"}
+opentelemetry-user-events-logs = { path = "../opentelemetry-user-events-logs"}
 opentelemetry-stdout = { path = "../opentelemetry-stdout", features = ["logs"]}
 rand = { version = "0.8.4", features = ["small_rng"] }
 tracing = {version = "0.1.37", default-features = false, features = ["std"]}
