--- a/stress/Cargo.toml
+++ b/stress/Cargo.toml
@@ -22,6 +22,7 @@ opentelemetry_api = { path = "../opentelemetry-api", features = ["metrics", "log
 opentelemetry_sdk = { path = "../opentelemetry-sdk", features = ["metrics", "logs"] }
 opentelemetry-appender-tracing = { path = "../opentelemetry-appender-tracing"}
 opentelemetry-stdout = { path = "../opentelemetry-stdout", features = ["logs"]}
+opentelemetry-user-events-logs = { path = "../opentelemetry-user-events-logs"}
 rand = { version = "0.8.4", features = ["small_rng"] }
 tracing = {version = "0.1.37", default-features = false, features = ["std"]}
 tracing-core = "0.1.31"
