Add stress test for base

--- a/stress/Cargo.toml
+++ b/stress/Cargo.toml
@@ -4,6 +4,11 @@ version = "0.1.0"
 edition = "2021"
 publish = false
 
+[[bin]] # Bin to run the empty function
+name = "base"
+path = "src/base.rs"
+doc = false
+
 [[bin]] # Bin to run the metrics stress tests for Counter
 name = "metrics"
 path = "src/metrics_counter.rs"
